--- a/mclient/package.json
+++ b/mclient/package.json
@@ -19,7 +19,9 @@
     "@babel/core": "^7.11.4",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@deck.gl/aggregation-layers": "^8.4.15",
     "@deck.gl/core": "8.2.5",
+    "@deck.gl/extensions": "^8.4.15",
     "@deck.gl/geo-layers": "8.2.5",
     "@deck.gl/layers": "8.2.5",
     "@deck.gl/mesh-layers": "^8.4.13",
@@ -53,7 +55,7 @@
     "tslint-react": "^5.0.0",
     "typescript-fsa": "^3.0.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.0",
     "websocket-driver": ">=0.7.4",
     "websocket-extensions": ">=0.1.4",
