--- a/mclient/package.json
+++ b/mclient/package.json
@@ -22,7 +22,7 @@
     "@deck.gl/aggregation-layers": "^8.4.15",
     "@deck.gl/core": "8.2.5",
     "@deck.gl/extensions": "^8.4.15",
-    "@deck.gl/geo-layers": "8.2.5",
+    "@deck.gl/geo-layers": "^8.4.15",
     "@deck.gl/layers": "8.2.5",
     "@deck.gl/mesh-layers": "^8.4.13",
     "@deck.gl/react": "8.2.5",
@@ -38,6 +38,7 @@
     "bootstrap": "^4.5.2",
     "create-react-class": "^15.6.3",
     "css-loader": "^4.2.1",
+    "deck.gl": "^8.4.15",
     "hard-source-webpack-plugin": "^0.13.1",
     "harmoware-vis": "^1.7.1",
     "node-sass": "^4.14.1",
